# arcadePortenta

./: .gitignore  CMakeLists.txt  README.md
Firmware/Emulation/: main.cpp
Firmware/Loop/: mainFirmware.cpp  mainFirmware.h
Hardware/Portenta/CPS1/: CMakeLists.txt  CPS_1.cubemx_script  CPS_1.ioc
Hardware/Portenta/CPS1/CM4/Src/: main.c
Hardware/Portenta/CPS1/CM7/Inc/: stm32h7xx_hal_conf.h
Hardware/Portenta/CPS1/CM7/Src/: main.c  stm32h7xx_hal_msp.c
Hardware/Portenta/CPS1/Common/Src/: syscalls.c
Hardware/Portenta/CPS1/Memory/: stm32h747xx_flash_CM4.ld  stm32h747xx_flash_CM7.ld  stm32h747xx_sram1_CM7.ld  stm32h747xx_sram2_CM4.ld
Videogame/CPS-1/: CMakeLists.txt
cmake/: HAL.cmake  consoles.cmake  cpp.cmake  cubeMX.cmake  firmware.cmake  stm32.cmake  toolchain.cmake
